FinalAssign/CarRentalSystem/log.txt
[ 90%] Built target nana
Consolidate compiler generated dependencies of target CarRentalSystem
[ 91%] Building CXX object CMakeFiles/CarRentalSystem.dir/Controller.cpp.o
[ 92%] Building CXX object CMakeFiles/CarRentalSystem.dir/RentalGUI.cpp.o
In file included from /home/neil/devel/school/2021_Fall/CPP_Term4/FinalAssign/CarRentalSystem/RentalGUI.h:14,
                 from /home/neil/devel/school/2021_Fall/CPP_Term4/FinalAssign/CarRentalSystem/RentalGUI.cpp:1:
/home/neil/devel/school/2021_Fall/CPP_Term4/FinalAssign/CarRentalSystem/Controller.h:24:5: error: ‘RentalGUI’ does not name a type
   24 |     RentalGUI rentalTabPage{*this};
      |     ^~~~~~~~~
make[2]: *** [CMakeFiles/CarRentalSystem.dir/build.make:104: CMakeFiles/CarRentalSystem.dir/RentalGUI.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:100: CMakeFiles/CarRentalSystem.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
